--- a/app/store/ProductPage.module.css
+++ b/app/store/ProductPage.module.css
@@ -11,6 +11,20 @@
 
 .imageContainer {
   margin-right: 30px;
+  max-width: 695px;
+}
+
+.mobile_images {
+  display: none;
+}
+
+.images {
+  display: block;
+}
+
+.imageContainer img {
+  width: 100%;
+  height: auto;
 }
 
 .infoContainer {
@@ -44,12 +58,9 @@
 
 .sizes button {
   cursor: pointer;
-  background-color: inherit;
   font-family: inherit;
-  list-style: none;
   margin-right: 10px;
   padding: 10px 20px;
-  background-color: white;
 }
 
 .sizes button:hover {
@@ -94,4 +105,68 @@
 
 .button:focus {
   box-shadow: none;
+}
+
+.roadToCheckout {
+  color: darkgreen;
+  margin-bottom: 20px;
+  font-size: 14px;
+}
+
+.sizeError {
+  font-size: 12px;
+  color: red;
+}
+
+@media (max-width: 1100px) {
+  .productContainer {
+    flex-flow: column wrap;
+  }
+  .infoContainer {
+    align-self: flex-start;
+    margin-top: 40px;
+  }
+}
+
+@media (max-width: 600px) {
+  .container {
+    padding: 10px;
+  }
+  .productContainer {
+    align-items: center;
+  }
+  .mobile_images {
+    display: block;
+  }
+  .imageContainer {
+    width: 100%;
+  }
+  .images {
+    display: none;
+  }
+  .category {
+    font-size: 12px;
+  }
+  .productTitle {
+    font-size: 25px;
+  }
+  .description {
+    font-size: 14px;
+  }
+
+  .sizes button {
+    padding: 5px 10px;
+  }
+
+  .price {
+    font-size: 25px;
+  }
+
+  .mrp {
+    font-size: 22px;
+  }
+
+  .button {
+    width: 90%;
+  }
 }
