bugs formating search and category pages

--- a/app/sign-in/[[...sign-in]]/Clerk.module.css
+++ b/app/sign-in/[[...sign-in]]/Clerk.module.css
@@ -6,7 +6,8 @@
   /* background-image: url("https://images.unsplash.com/photo-1634322487121-ba84c23cbc78?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1935&q=80"); */
   /* background-image: url("https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2073&q=80"); */
   /* background-image: url("https://images.unsplash.com/photo-1544365558-35aa4afcf11f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1936&q=80"); */
-  background-image: url("https://images.unsplash.com/photo-1599060052009-24d6d0b0161c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2071&q=80");
+  /* background-image: url("https://images.unsplash.com/photo-1599060052009-24d6d0b0161c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2071&q=80"); */
+  background-image: url("https://images.unsplash.com/photo-1473081556163-2a17de81fc97?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1974&q=80");
   background-size: cover; /* Scale the image to cover the entire container */
   background-position: center; /* Center the image horizontally and vertically */
   background-repeat: no-repeat; /* Prevent the image from repeating */
