--- a/app/store/ProductPage.module.css
+++ b/app/store/ProductPage.module.css
@@ -14,6 +14,11 @@
   max-width: 695px;
 }
 
+.imageContainer img {
+  height: auto;
+  width: 100%;
+}
+
 .mobile_images {
   display: none;
 }
@@ -22,10 +27,6 @@
   display: block;
 }
 
-.imageContainer img {
-  width: 100%;
-  height: auto;
-}
 @media (max-width: 1100px) {
   .productContainer {
     flex-flow: column wrap;
@@ -45,5 +46,12 @@
   }
   .mobile_images {
     display: block;
+  }
+  .images {
+    display: none;
+  }
+  .imageContainer {
+    width: 95%;
+    margin: auto;
   }
 }
