--- a/app/support/Support.module.css
+++ b/app/support/Support.module.css
@@ -1,11 +1,12 @@
 .container {
-  max-width: 1000px;
-  margin: 10px auto;
   padding: 20px;
-  background-color: #f5f5f5;
 }
 
 .titleBox {
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  padding: 20px 40px;
+  margin: 10px auto 70px auto;
+  max-width: 1200px;
   display: flex;
   flex-flow: row wrap;
   align-items: center;
@@ -19,30 +20,20 @@
   margin-bottom: 20px;
 }
 
-.info {
-  font-size: 16px;
-  line-height: 1.5;
-}
-
 .icons {
   margin: 20px 0;
   color: rgb(0, 96, 99);
   cursor: pointer;
+  padding: 10px;
+  border-radius: 20px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  margin-right: 30px;
+  transition: all 0.3s;
 }
 
 .icons:hover {
-  color: rgb(47, 143, 146);
-}
-
-.container h2,
-.container h3 {
-  margin-bottom: 10px;
-}
-
-.container h3 {
-  text-decoration: underline;
-  cursor: pointer;
-  width: 220px;
+  color: white;
+  background-color: rgb(55, 55, 55);
 }
 
 .description {
@@ -54,17 +45,17 @@
   border-top: 2px solid rgb(73, 73, 73);
 }
 
-.sections {
-  display: flex;
-  justify-content: space-around;
-  flex-flow: row wrap;
-  margin: 20px 10px;
+.section {
+  margin: 40px 10px;
 }
 
-.section {
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  width: 400px;
-  padding: 10px 20px;
-  margin: 10px 20px;
-  border-radius: 10px;
+.container h2 {
+  margin-bottom: 20px;
+}
+
+.buttons {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  align-items: center;
 }
