--- a/app/store/tshirts/Tshirts.module.css
+++ b/app/store/tshirts/Tshirts.module.css
@@ -12,7 +12,7 @@
 
 .list {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   flex-flow: row wrap;
   margin: 20px;
 }
