about page done

--- a/app/store/tshirts/Tshirts.module.css
+++ b/app/store/tshirts/Tshirts.module.css
@@ -11,9 +11,11 @@
 }
 
 .list {
-  display: flex;
-  justify-content: space-between;
-  flex-flow: row wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 320px);
+  justify-content: space-around;
+  grid-gap: 20px;
+  flex: 1;
   margin: 20px;
 }
 
