--- a/components/UserButton.module.css
+++ b/components/UserButton.module.css
@@ -1,3 +1,8 @@
+.container .MuiMenu-list,
+.container .MuiMenuItem-root {
+  font-family: inherit !important;
+}
+
 .icon {
   cursor: pointer;
   color: #b3b3b3;
