--- a/app/globals.css
+++ b/app/globals.css
@@ -7,9 +7,16 @@
 body {
   color: #111;
   background-color: #f6f6f6;
+  font-synthesis: none;
+  letter-spacing: 1px;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.MuiMenu-list,
+.container .MuiMenuItem-root {
+  font-family: inherit !important;
 }
