--- a/app/page.module.css
+++ b/app/page.module.css
@@ -6,7 +6,7 @@
 .title {
   margin-top: 50px;
   font-size: 4rem;
-  font-weight: bold;
+  font-weight: 600;
   text-transform: uppercase;
   color: #111;
   text-align: center;
@@ -48,17 +48,17 @@
 }
 
 .question {
-  font-weight: bold;
+  font-weight: 600;
   margin-bottom: 5px;
 }
 
 .homegrown {
-  width: 420px;
-  margin: 0 auto 60px auto;
+  width: 900px;
+  margin: 60px auto;
   text-align: center;
-  color: #990000;
-  font-size: 1.5rem;
-  font-weight: bold;
+  color: #06038d;
+  font-size: 2.5rem;
+  font-weight: 600;
 }
 
 .tricolorBackground {
@@ -80,7 +80,7 @@
   }
 
   .homegrown {
-    font-size: 1rem;
+    font-size: 2rem;
 
     width: 300px; /* Decrease font size for the homegrown text */
   }
