--- a/components/HomeSection.module.css
+++ b/components/HomeSection.module.css
@@ -10,7 +10,7 @@
   align-items: center;
   text-align: center;
   font-size: 24px;
-  font-weight: bold;
+  font-weight: 600;
   margin: 20px auto;
   position: relative;
   text-transform: uppercase;
