--- a/components/MoreProductInfo.module.css
+++ b/components/MoreProductInfo.module.css
@@ -12,7 +12,7 @@
 
 .question {
   margin: 10px 0;
-  font-weight: bold;
+  font-weight: 600;
   display: block;
 }
 
@@ -24,6 +24,8 @@
 .container {
   max-width: 600px;
   margin-top: 20px;
+
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .actionButtons {
@@ -56,17 +58,16 @@
 .content {
   padding: 20px;
   background-color: #fff;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .questions {
   display: block;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .question {
   margin-top: 10px;
-  font-weight: bold;
+  font-weight: 600;
 }
 
 .answer {
@@ -75,6 +76,6 @@
 }
 
 .text {
-  font-weight: bold;
+  font-weight: 600;
   color: #333;
 }
