--- a/components/ProductInfo.module.css
+++ b/components/ProductInfo.module.css
@@ -5,6 +5,7 @@
 
 .category {
   color: orangered;
+  text-transform: capitalize;
 }
 
 .productTitle {
@@ -28,11 +29,10 @@
 }
 
 .sizeButton {
+  border: none;
   text-align: center;
-  width: 65px;
-  border-radius: 40px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  border: 0.5px solid black;
+  border-radius: 40px;
   cursor: pointer;
   font-family: inherit;
   margin-right: 10px;
@@ -53,7 +53,7 @@
 .price {
   margin-right: 30px;
   font-size: 30px;
-  font-weight: bold;
+  font-weight: 600;
 }
 
 .mrp {
@@ -72,24 +72,24 @@
 .addButton,
 .buyButton {
   border-radius: 5px;
-  font-weight: bold;
+  font-weight: 600;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   cursor: pointer;
   padding: 10px;
   font-family: inherit;
   font-size: 20px;
-  border: 2px solid black;
+  border: 1px solid black;
   width: 250px;
 }
 
 .addButton {
-  background-color: #fff;
-  color: #111;
+  background-color: #111;
+  color: white;
 }
 
 .buyButton {
-  background-color: #111;
-  color: white;
+  background-color: #fff;
+  color: #111;
 }
 
 .addButton:hover,
