--- a/components/StoreProducts.module.css
+++ b/components/StoreProducts.module.css
@@ -1,7 +1,14 @@
 .container {
   min-height: 600px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 320px);
+  justify-content: space-around;
+  grid-gap: 20px;
   flex: 1;
-  display: flex;
-  justify-content: space-between;
-  flex-flow: row wrap;
+  padding: 30px;
+}
+
+.container > .flex-item:last-child {
+  align-self: flex-start;
+  justify-self: flex-start;
 }
