--- a/app/cart/Cart.module.css
+++ b/app/cart/Cart.module.css
@@ -55,6 +55,18 @@
   color: white;
 }
 
+.emptyCart {
+  margin-top: 200px;
+  padding: 30px 0;
+  position: relative;
+  top: 20px;
+}
+
+.underline {
+  text-decoration: underline;
+  text-underline-offset: 3px;
+}
+
 @media (max-width: 1200px) {
   .container {
     padding: 20px 10px;
