--- a/app/checkout/Checkout.module.css
+++ b/app/checkout/Checkout.module.css
@@ -46,6 +46,15 @@
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
+.emptyCart {
+  margin-top: 200px;
+  padding: 30px 0;
+  position: relative;
+  top: 20px;
+  text-decoration: underline;
+  text-underline-offset: 3px;
+}
+
 @media screen and (max-width: 1000px) {
   .container {
     padding: 10px;
