--- a/components/FilterAndResults.module.css
+++ b/components/FilterAndResults.module.css
@@ -31,16 +31,16 @@
 @media (max-width: 510px) {
   .container {
     flex-flow: column wrap;
-    padding: 0;
+    padding: 0px;
   }
   .filterContainer {
     align-self: center;
     display: flex;
     align-items: center;
     height: 20px;
-    padding: 30px;
+    padding: 20px;
     width: 100%;
-    margin: 0 0 20px 0;
+    margin: 0;
     justify-content: space-around;
     background-color: white;
     box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
