--- a/components/ReviewOrder.module.css
+++ b/components/ReviewOrder.module.css
@@ -83,7 +83,7 @@
     flex-flow: column wrap;
   }
   .moreInfo {
-    margin-top: 10px;
+    padding: 10px;
     border-top: 1px solid rgb(210, 210, 210);
   }
 }
