--- a/components/AddressCard.module.css
+++ b/components/AddressCard.module.css
@@ -26,3 +26,10 @@
   margin-bottom: 5px;
   border-bottom: 1px solid rgb(210, 210, 210);
 }
+
+@media screen and (max-width: 768px) {
+  .container {
+    width: 100%;
+    height: auto;
+  }
+}
