--- a/app/globals.css
+++ b/app/globals.css
@@ -4,11 +4,30 @@
   margin: 0;
 }
 
+@font-face {
+  font-family: "HM Sans Regular";
+  src: url("https://db.onlinewebfonts.com/t/70f3e46b3bb904260d1b1a6e0f2edf08.eot");
+  src:
+    url("https://db.onlinewebfonts.com/t/70f3e46b3bb904260d1b1a6e0f2edf08.eot?#iefix")
+      format("embedded-opentype"),
+    url("https://db.onlinewebfonts.com/t/70f3e46b3bb904260d1b1a6e0f2edf08.woff2")
+      format("woff2"),
+    url("https://db.onlinewebfonts.com/t/70f3e46b3bb904260d1b1a6e0f2edf08.woff")
+      format("woff"),
+    url("https://db.onlinewebfonts.com/t/70f3e46b3bb904260d1b1a6e0f2edf08.ttf")
+      format("truetype"),
+    url("https://db.onlinewebfonts.com/t/70f3e46b3bb904260d1b1a6e0f2edf08.svg#HM Sans Regular")
+      format("svg");
+}
+
 body {
   color: #111;
+  font-family: "HM Sans Regular";
   background-color: #f6f6f6;
   font-synthesis: none;
   letter-spacing: 1px;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
 }
 
 a {
