--- a/components/AddressCard.module.css
+++ b/components/AddressCard.module.css
@@ -1,8 +1,9 @@
 .container {
   font-size: 14px;
-  padding: 20px;
+  padding: 10px;
   width: 200px;
   height: 200px;
+  overflow: scroll;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border-radius: 10px;
   cursor: pointer;
