--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
 
 @font-face {
   font-family: "myFirstFont";
-  src: url("../resources/Fonts/09c8fb44d2c62d99647e4ce58736293e.ttf");
+  src: url("../resources/Fonts/09c8fb44d2c62d99647e4ce58736293e.eot");
 }
 
 /* @font-face {
