loader made for search and payment

--- a/components/PaymentDetails.module.css
+++ b/components/PaymentDetails.module.css
@@ -93,6 +93,16 @@
   width: 100%;
 }
 
+.loader {
+  display: flex;
+  margin-top: 10px;
+  color: green;
+}
+
+.loaderText {
+  margin-left: 10px;
+}
+
 @media (min-width: 1000px) {
   .payment {
     position: sticky;
