--- a/app/search/Search.module.css
+++ b/app/search/Search.module.css
@@ -41,9 +41,32 @@
 }
 
 .list {
+  min-height: 400px;
   display: flex;
   justify-content: flex-start;
   flex-flow: row wrap;
+}
+
+.loader {
+  display: flex;
+  flex-flow: column wrap;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  padding-bottom: 10px;
+  margin: 20px 20px;
+  transition: 0.2s all;
+  border-radius: 10px;
+  width: 320px;
+  height: 400px;
+  justify-content: center;
+  align-items: center;
+}
+
+.emojie {
+  font-size: 26px;
+}
+
+.loaderText {
+  text-align: center;
 }
 
 .headerImage {
