--- a/components/OtherProducts.module.css
+++ b/components/OtherProducts.module.css
@@ -13,7 +13,10 @@
 @media (max-width: 768px) {
   .list {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-flow: row wrap;
+    justify-content: space-between;
+  }
+  .container {
+    padding: 10px;
   }
 }
