--- a/components/OtherProducts.module.css
+++ b/components/OtherProducts.module.css
@@ -15,8 +15,14 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
+    grid-gap: 10px;
   }
   .container {
     padding: 10px;
+  }
+  .title {
+    margin-bottom: 10px;
+    font-size: 18px;
+    text-align: center;
   }
 }
